test/integration/model-name/stanc.expected
  $ ../../../../install/default/bin/stanc --name=foo  bad.stan

Semantic error at file bad.stan, line 3, columns 6-9:
   -------------------------------------------------
     1:  data {
     2:    // declare matching model name should fail
     3:    int foo;  
               ^
     4:  }
     5:  parameters {
   -------------------------------------------------

Identifier 'foo' clashes with model name.

  $ ../../../../install/default/bin/stanc --name=foo  good.stan

